[project]
name = "resume-critiquer"
version = "0.1.0"
description = "AI-powered resume analysis tool with semantic matching and PDF report generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "openai>=1.91.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
    "plotly>=5.17.0",
    "reportlab>=4.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
